--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,60 @@
+# macOS
 .DS_Store
-client/.DS_Store
-client/node_modules
-.DS_Store
-src/.DS_Store
-src/components/.DS_Store
-*DS_Store
-node_modules
-/.idea/
-node_modules
-dist
-eslint
+
+# Windows
 Thumbs.db
-.gradle
-build/
-target/
-out/
+
+# Node modules
+node_modules/
+client/node_modules/
+
+# IDEs and Editors
+/.idea/
 *.iml
 *.ipr
 *.iws
 .project
 .settings
+
+# Build directories
+dist/
+build/
+target/
+out/
+
+# Environment-specific files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+jspm_packages/
+
+# Temporary files
+*.swp
+*.temp
+*.tmp
+*.bak
+*.backup
+*.orig
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# ESLint
+eslint
+
+# Gradle
+.gradle
+
+# Java
 .classpath
