--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@emotion/react": "^11.9.0",
-		"@emotion/styled": "^11.8.1",
+		"@emotion/react": "^11.13.3",
+		"@emotion/styled": "^11.13.0",
 		"@mui/icons-material": "^5.6.2",
-		"@mui/material": "^5.6.3",
+		"@mui/material": "^5.16.7",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.1.1",
 		"@testing-library/user-event": "^13.5.0",
+		"axios": "^1.7.7",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
 		"react-fetch-hook": "^1.9.5",
